Fixed z-index of menu icons

--- a/src/media/sass/styles.sass
+++ b/src/media/sass/styles.sass
@@ -100,6 +100,7 @@ svg
 	stroke-width: 0
 	stroke: currentColor
 	fill: currentColor
+	z-index: 1
 
 .directory
 	margin-bottom: 1em
@@ -266,6 +267,7 @@ a, .link
 			opacity: 0
 			transition: all .3s ease-in-out
 			transition-property: opacity
+			z-index: 10
 
 			li
 				padding: 0.3em
